--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -4,7 +4,9 @@ metadata:
   name: guestbook-ui
 spec:
   ports:
-  - port: 80
+  -name: http
+    port: 80
     targetPort: 80
+    type: ClsuterIP
   selector:
     app: guestbook-ui
