--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
   name: guestbook-ui
 spec:
-  type: ClsuterIP
+  type: ClusterIP
   selector:
     app: guestbook-ui 
   ports:
   - name: http
     port: 80
     targetPort: 80
-  
