--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: guestbook-ui
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: guestbook-ui 
   ports:
   - name: http
     port: 80
     targetPort: 80
+    nodePort: 30008
